Phone Number Change

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           <div class="contact-details-column w-row">
             <div class="w-col w-col-3"><img src="images/phone-call-2.svg" loading="lazy" alt=""></div>
             <div class="column-3 w-col w-col-9">
-              <p class="paragraph">+91 94973 12345<br>+91 94974 12345</p>
+              <p class="paragraph">+91 94973 12345</p>
             </div>
           </div>
         </div>
