--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
       <div class="columns-7 w-row">
         <div class="w-col w-col-7">
           <div class="header-heading-holder">
+            <h1 class="problem-heading specd">Prolonging shelf life and enriching food quality.<br><br></h1>
             <div class="underline customs"></div>
             <p class="paragraph-5">Did you know that about 40% of the food produced in India is gone to waste, the major reason being, most foods produced are processed or stored inefficiently and are given inadequate attention. We have a solution to enhance the shelf life of food products which in turn enriches the consumer experience.<br></p>
           </div>
